--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                     </div>
 
                     <div>
-                        <h2 class="about__subtitle">I'am Suriya M</h2>
+                        <h2 class="about__subtitle">I am Suriya M</h2>
                         <span class="about__profession">Devops and Cloud engineer</span>
                         <p class="about__text">Experienced DevOps Engineer with over 3.5 years of expertise in automating infrastructure, optimizing
                             CI/CD pipelines, and managing Kubernetes environments. Skilled in AWS, Azure, scripting, container
